[package]
name        = "leptos-arrow-grid"
version     = "0.1.1"
edition     = "2024"
rust-version = "1.94"
description = "The high-performance, virtualized data grid for Leptos, powered by Apache Arrow"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/KoVal177/leptos-arrow-grid"
homepage    = "https://github.com/KoVal177/leptos-arrow-grid"
keywords    = ["leptos", "arrow", "data-grid", "virtualized", "wasm"]
categories  = ["gui", "web-programming"]
include     = ["src/**", "style/**", "docs/**", "README.md", "TROUBLESHOOTING.md", "LICENSE*"]

[dependencies]
leptos       = { version = "0.8", features = ["csr"] }
arrow-array  = "58"
arrow-schema = "58"
arrow-cast   = "58"
js-sys        = "0.3"
send_wrapper  = "0.6"
tracing       = "0.1"
wasm-bindgen  = "=0.2.117"
wasm-bindgen-futures = "0.4"
web-sys      = { version = "0.3", features = [
    "Blob", "BlobPropertyBag", "Clipboard", "DomRect", "Element", "HtmlAnchorElement",
    "HtmlElement", "HtmlHeadElement", "Navigator", "Node", "PointerEvent",
    "ResizeObserver", "ResizeObserverEntry", "Url", "Window",
] }

[dev-dependencies]
proptest = "1"

[lints.rust]
unsafe_code           = "forbid"
missing_docs          = "warn"
unreachable_pub       = "warn"

[lints.clippy]
pedantic              = { level = "warn", priority = -1 }
must_use_candidate    = "allow"
module_name_repetitions = "allow"
missing_errors_doc    = "allow"
